--- a/c03-landing-page/style.css
+++ b/c03-landing-page/style.css
@@ -30,12 +30,28 @@ p {
 img {
     height: 100%;
     width: 100%;
-    border: 4px solid green;
 }
+
+ion-icon {
+    font-size: 2em;
+    color: white;
+    text-decoration: none;
+    padding: .2em;
+}
+
+ion-icon:hover {
+    color: var(--SoftMagenta);
+}
+
+a {
+    text-decoration: black;
+}
+
 
 .wrapper {
     max-width: 1200px;
     margin: auto;
+    padding: 2em
 }
 
 .nav {
@@ -46,17 +62,16 @@ img {
 
 .splash {
     display: flex;
-    border: 4px solid green;
 }
 
 .image {
     flex: 1 1 55%;
-    border: 4px solid green;
+    
+    width: 100%;
 }
 
 .text {
     flex: 1 1 45%;
-    border: 4px solid green;
     padding: 2em;
 }
 
@@ -64,18 +79,34 @@ img {
     padding: .75em 3em;
     background-color: white;
     border-radius: 2em;
+    box-shadow: 0em .25em .5em rgba(0, 0, 0, .25);
     width: fit-content;
     margin: 1em 0;
     color: var(--Violet);
 }
 
+.register:hover {
+    background-color: var(--SoftMagenta);
+    color: white;
+}
+
 .social {
     display: flex;
-    border: 4px solid green;
-    height: 3em;
-    width: 100%;
-    /* justify-content: right; */
-    /* align-items: flex-end; */
-    /* align-content: flex-end; */
-    justify-items: right;
+    justify-content: flex-end;
+}
+
+@media only screen and (max-width: 800px) {
+    .splash {
+        flex-direction: column;
+    }
+    .text {
+        text-align: center;
+    }
+    .register {
+        justify-self: center;
+        margin: auto;
+    }
+    .social {
+        justify-content: center;
+    }
 }
