--- a/c04/style.css
+++ b/c04/style.css
@@ -129,6 +129,9 @@ footer {
     .p-image-with-side-text {
         flex-direction: column;
     }
+    .image-1 img {
+    padding: 1em;
+    }
     .list-1 p,
     .list-1 h3 {
         text-align: center;
