--- a/c04/style.css
+++ b/c04/style.css
@@ -39,7 +39,8 @@ p {
     padding: 2em;
 }
 
-.bigwrap {
+.bigwrap,
+.ftrwrap {
     max-width: 1200px;
     margin: auto;
 }
@@ -64,7 +65,7 @@ p {
 .dlbtn-1,
 .dlbtn-2 {
     background-color: var(--StrongCyan);
-    padding: 1em;
+    padding: 1em 2em;
     border-radius: 2em;
     margin: 1em .5em;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -102,6 +103,7 @@ p {
 .column-in-3-col {
     width: 22em;
     margin-top: 5em;
+    padding: 1em;
 }
 
 .p-references {
@@ -118,7 +120,56 @@ p {
 }
 
 footer {
-    background-color: var(--GrayishBlue);
+    background-color: rgba(100, 100, 111, 0.2);
+}
+
+.ftrwrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2em 0;
+}
+
+.ftrwrap img {
+    width: 50%;
+}
+
+.ftrwrap a {
+    text-decoration: none;
+    color: var(--DarkGrayishBlue);
+}
+
+.ftr-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-left: 5em;
+    margin-right: auto;
+    height: 5em;
+    /* min-width: 15em; */
+}
+
+.ftr-menu a {
+    min-width: 10em;
+    text-align: left;
+    padding: .5em;
+}
+
+.ftr-social {
+    font-size: 2em;
+    letter-spacing: .2em;
+    width: 4.5em;
+}
+
+.attribution {
+    font-size: 11px; 
+    text-align: center;
+    margin-bottom: 0;
+}
+.attribution a {
+    color: hsl(228, 45%, 44%); 
 }
 
 @media only screen and (max-width:600px) {
@@ -142,5 +193,20 @@ footer {
     }
     .p-references {
         flex-direction: column;
+    }
+    .ftrwrap {
+        flex-direction: column;
+    }
+    .ftr-menu {
+        flex-direction: column;
+        height: auto;
+        margin: 0;
+    }
+    .ftr-menu a {
+        text-align: center;
+        padding: 1em;
+    }
+    .ftr-social {
+        margin-top: 1em;
     }
 }
