--- a/c04/style.css
+++ b/c04/style.css
@@ -14,7 +14,7 @@
 header {
     background-image: linear-gradient(rgba(255,255,255,1), rgba(255,255,255,1));
     background-size: cover;
-    background-image: url(../c04/images/bg-header-desktop.png);
+    background-image: url(/c04/images/bg-header-desktop.png);
     padding-top: 5em;
 }
 
@@ -148,6 +148,7 @@ footer {
     margin-left: 5em;
     margin-right: auto;
     height: 5em;
+    /* min-width: 15em; */
 }
 
 .ftr-menu a {
