Image URL changes on all challenges

--- a/c02/style.css
+++ b/c02/style.css
@@ -16,7 +16,7 @@
 
 html, 
 body {
-    background-image: url(/c02/images/bg-intro-desktop.png);
+    background-image: url(../c02/images/bg-intro-desktop.png);
     background-color: var(--Red);
     background-repeat:round;
     background-size: contain;
