more transition style on c03

--- a/c03/style.css
+++ b/c03/style.css
@@ -36,14 +36,13 @@ ion-icon {
     font-size: 2em;
     color: white;
     text-decoration: none;
-    padding: .2em;
-    transition: scale .5s, padding 0.5s;
+    padding: .3em;
+    transition: .2s ease-in-out;
 }
 
 ion-icon:hover {
     color: var(--SoftMagenta);
     scale: 1.5;
-    padding: 0.2em .5em;
 }
 
 a {
@@ -86,7 +85,7 @@ a {
     width: fit-content;
     margin: 1em 0;
     color: var(--Violet);
-    transition: color .5s, background-color .5s;
+    transition: color .2s, background-color .2s;
     transition-timing-function: ease-in-out;
 }
 
