--- a/c05/style.css
+++ b/c05/style.css
@@ -13,10 +13,14 @@ h1,
 h2 {
     font-family: 'Poppins', sans-serif;
 }
+a {
+    text-decoration: none;
+}
 
 .container {
     max-width: 1000px;
     margin: 0 auto;
+    padding: 1em;
 }
 
 header {
@@ -31,6 +35,8 @@ header {
     padding: .5em 2em;
     border: 2px solid var(--LightPink);
     border-radius: 2em;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 4px 8px;
+    transition: .2s ease-in-out;
 }
 
 .trybtn:hover {
@@ -38,23 +44,44 @@ header {
     background: var(--LightPink);
 }
 
+.trybtn:active {
+    color: var(--LightPink);
+    background: white;
+    border-color: var(--LightPink);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 0px 8px;
+    translate: 0 4px;
+}
+
 .button {
     padding: 1em 4em;
     border-radius: 2em;
+    border: 2px solid transparent;
     background: var(--Pink);
     color: white;
     width: fit-content;
     margin: auto;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 4px 8px;
+    transition: .1s ease-in-out;
+    box-sizing: border-box;
 }
 
 .button:hover {
     background: white;
     color: var(--Pink);
+    border: 2px solid var(--Pink);
+}
+
+.button:active {
+    background: var(--Pink);
+    color: white;
+    border: 2px solid transparent;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 0px 8px;
+    translate: 0 4px;
 }
 
 
 .hero {
-    background: rgba(200, 100, 100, .5);
+    /* background: rgba(200, 100, 100, .5); */
     margin: 5em 5em;
     display: flex;
     flex-direction: column;
@@ -65,6 +92,10 @@ header {
 .minicont {
     max-width: 600px;
     margin: 0 auto;
+}
+
+.mockups{
+    margin: 5em 0;
 }
 
 .twocol {
