--- a/c05/style.css
+++ b/c05/style.css
@@ -18,16 +18,17 @@ a {
 }
 
 .container {
-    max-width: 1000px;
+    max-width: 1440px;
     margin: 0 auto;
-    padding: 1em;
+    padding: 4rem;
 }
 
 header {
-    margin: 4em 0;
+    /* margin: 4em 0; */
     display: flex;
     align-items: flex-end;
 }
+
 
 .trybtn {
     margin-left: auto;
@@ -82,26 +83,79 @@ header {
 
 .hero {
     /* background: rgba(200, 100, 100, .5); */
-    margin: 5em 5em;
+    margin: 9rem 9rem;
     display: flex;
     flex-direction: column;
     text-align: center;
     
 }
 
+.hero h1 {
+    font-size: 3rem;
+}
+
 .minicont {
     max-width: 600px;
+    font-size: larger;
     margin: 0 auto;
 }
 
+.minicont p {
+    margin-top: 0;
+    margin-bottom: 3rem;
+}
+
 .mockups{
-    margin: 5em 0;
+    margin: 5rem 0;
 }
 
 .twocol {
     display: flex;
     justify-content: space-around;    
 }
+
+.twocol h2 {
+    font-size: 5rem;
+    margin: 0;
+}
+
+.twocol p {
+    margin: 0;
+    font-size: larger;
+    color: grey;
+}
+
+.twocol-col img {
+    margin-right: 100%;
+}
+
+.feat {
+    display: flex;
+    
+    justify-content: space-between;
+    align-items: center;
+    margin: 10rem 0;
+}
+
+.feat:nth-of-type(2) {
+    flex-direction: row-reverse;
+}
+
+.feat-item {
+    flex: 1 1 50%;
+    padding: 6rem;
+    text-align: left;
+
+}
+
+.feat-item img {
+    width: 100%;
+}
+
+.feat-item h2 {
+    font-size: 2rem;
+}
+
 
 
 .attribution { 
