--- a/c05/style.css
+++ b/c05/style.css
@@ -10,10 +10,12 @@ body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
 }
+
 h1,
 h2 {
     font-family: 'Poppins', sans-serif;
 }
+
 a {
     text-decoration: none;
 }
@@ -46,7 +48,7 @@ header {
 }
 
 .trybtn:hover {
-    color:white;
+    color: white;
     background: var(--LightPink);
     translate: 0 -4px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 4px 8px;
@@ -96,7 +98,7 @@ header {
     display: flex;
     flex-direction: column;
     text-align: center;
-    
+
 }
 
 .hero h1 {
@@ -114,13 +116,13 @@ header {
     margin-bottom: 3rem;
 }
 
-.mockups{
+.mockups {
     margin: 5rem 0;
 }
 
 .twocol {
     display: flex;
-    justify-content: space-around;    
+    justify-content: space-around;
 }
 
 .twocol h2 {
@@ -136,6 +138,10 @@ header {
 
 .twocol-col img {
     margin-right: 100%;
+}
+
+.twocol-col {
+    margin: 5rem auto;
 }
 
 .feat {
@@ -170,8 +176,8 @@ header {
 }
 
 footer {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    /* grid-template-columns: 1fr 1fr; */
     background: var(--VeryDarkCyan);
     height: 100%;
     overflow: hidden;
@@ -180,7 +186,9 @@ footer {
 }
 
 footer .footer-col {
-    padding: 0 3rem;
+    padding: 3rem;
+    width: 100%;
+
 }
 
 /* footer .twocol p {
@@ -207,48 +215,81 @@ footer .footer-col {
     margin-right: 1rem;
 }
 
-footer .button { 
+footer .button {
     border-radius: .5rem;
     padding: .5rem 2rem;
     font-size: 1rem;
-    box-sizing: border-box;
 }
 
 footer input {
     margin: 1rem 1rem 1rem 0;
     padding: .75rem;
-    width: auto;
+    width: calc(100% - 12rem);
     border-radius: .5rem;
     border: none;
 }
 
-footer input:active {
-    border: none;
+footer input:invalid {
+    outline: 2px solid red;
+
 }
 
-.attribution { 
-    font-size: 11px; 
-    text-align: center; 
+footer input:focus {
+    outline: 2px solid var(--LightPink);
 }
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+    margin: auto;
+}
+
+.social {
+    display: flex;
+    padding: 1em 0;
+    gap: .5em;
+    font-size: 2rem;
+}
+
+.social i:hover {
+    color: hsl(200, 100%, 60%);
+}
+
+.social a {
+    text-decoration: none;
+    color: inherit;
+}
+
+social a:visited {
+    color: inherit;
+
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
 }
 
 @media only screen and (max-width:700px) {
+
     .feat,
-    .twocol {
+    .twocol,
+    .feat:nth-of-type(odd),
+    footer {
         flex-direction: column;
+        margin: 0 auto;
     }
+
     footer {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
     }
-    .minicont {
 
-    }
+    .minicont {}
+
     .container {
         padding: 0;
     }
+
     header {
         padding: 2rem;
     }
