--- a/c05/style.css
+++ b/c05/style.css
@@ -284,7 +284,7 @@ social a:visited {
         grid-template-rows: 1fr 1fr;
     }
 
-    .minicont {}
+    /* .minicont {} */
 
     .container {
         padding: 0;
