--- a/c06/style.css
+++ b/c06/style.css
@@ -1,3 +1,6 @@
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap');
+
 /* --------------------- */
 /* Custom Properties     */
 /* --------------------- */
@@ -49,6 +52,16 @@ picture {
     margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    font-weight: 400;
+}
+
 /* Smooth scrolling */
 
 html:focus-within {
@@ -57,6 +70,10 @@ html:focus-within {
 
 /* Set up the body */
 body {
+    font-family: var(--ff-sans-normal);
+    font-size: var(--fs-400);
+    color: hsl(var(--clr-white));
+    background-color: hsl(var(--clr-dark));
     min-height: 100vh;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
@@ -103,6 +120,11 @@ select {
 .grid {
     display: grid;
     gap: var(--gap, 1rem);
+}
+
+.flow>*+* {
+    margin-top: var(--flow-space, 1rem);
+    /* outline: 1px solid red; */
 }
 
 .container {
@@ -152,6 +174,123 @@ select {
 .bg-dark20 {
     background-color: hsl(var(--clr-dark) / .2);
     /* color: hsl(var(--clr-dark) / .2); */
+}
+
+.ff-serif {
+    font-family: var(--ff-serif);
+}
+
+.ff-sans-cond {
+    font-family: var(--ff-sans-cond);
+}
+
+.ff-sans-normal {
+    font-family: var(--ff-sans-normal);
+}
+
+.letter-spacing-1 {
+    letter-spacing: 4.75px;
+}
+
+.letter-spacing-2 {
+    letter-spacing: 2.7px;
+}
+
+.letter-spacing-3 {
+    letter-spacing: 2.35px;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.fs-900 {
+    font-size: var(--fs-900);
+}
+
+.fs-800 {
+    font-size: var(--fs-800);
+}
+
+.fs-700 {
+    font-size: var(--fs-700);
+}
+
+.fs-600 {
+    font-size: var(--fs-600);
+}
+
+.fs-500 {
+    font-size: var(--fs-500);
+}
+
+.fs-400 {
+    font-size: var(--fs-400);
+}
+
+.fs-300 {
+    font-size: var(--fs-300);
+}
+
+.fs-200 {
+    font-size: var(--fs-200);
+}
+
+
+.fs-900,
+.fs-800,
+.fs-700,
+.fs-600 {
+    line-height: 1.1;
+}
+
+.numbered-title {
+    font-family: var(--ff-sans-cond);
+    font-size: var(--fs-500);
+    text-transform: uppercase;
+    letter-spacing: 4.72px;
+    margin-bottom: 3rem;
+}
+
+.numbered-title>span {
+    margin-right: .5em;
+    font-weight: 700;
+    color: hsl(var(--clr-white) / .25);
+}
+
+
+
+/* --------------------- */
+/* Components            */
+/* --------------------- */
+
+.large-button {
+    position: relative;
+    display: grid;
+    z-index: 1;
+    place-items: center;
+    padding: 0 2em;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    text-decoration: none;
+}
+
+.large-button::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    background: hsl(var(--clr-white) / .15);
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    opacity: 0;
+    transition: transform 500ms ease-in-out, opacity 500ms linear;
+}
+
+.large-button:hover::after {
+
+    opacity: 1;
+    transform: scale(1.5);
 }
 
 /* --------------------- */
