--- a/c06/style.css
+++ b/c06/style.css
@@ -298,7 +298,7 @@ select {
     font-size: var(--fs-500);
     text-transform: uppercase;
     letter-spacing: 4.72px;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 
 .numbered-title>span {
@@ -571,10 +571,12 @@ body {
     text-align: center;
     place-items: center;
     padding-inline: 1rem;
+    padding-bottom: 3rem;
 }
 
 .grid-container * {
     max-width: 50ch;
+    margin-inline: auto;
 }
 
 .grid-container--destination {
@@ -590,6 +592,10 @@ body {
     grid-area: title;
 }
 
+.grid-container--destination>h1 {
+    margin-left: 0;
+}
+
 .grid-container--destination>img {
     grid-area: image;
     max-width: 60%;
@@ -603,15 +609,15 @@ body {
     grid-area: content;
 }
 
-.destination-meta {
+.destination-info>.flex {
     border-top: 1px solid hsl(var(--clr-white) / 0.15);
     padding: 2rem;
     flex-direction: column;
-    width: 100%;
+    /* width: 100%; */
     /* padding-top: 2rem; */
 }
 
-.destination-meta>* {
+.destination-info>* {
     margin-inline: auto;
 }
 
@@ -620,7 +626,19 @@ body {
     align-items: end;
 }
 
-@media (min-width: 45em) {
+@media (min-width:35rem) {
+    .destination-info>.flex {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .numbered-title {
+        justify-self: left;
+        padding-top: 2rem;
+    }
+}
+
+@media (min-width: 45rem) {
     .grid-container {
         text-align: left;
         column-gap: var(--container-gap, 2rem);
@@ -628,11 +646,33 @@ body {
         position: relative;
     }
 
-    .grid-container>*:first-child {
+    .grid-container--home>*:first-child {
         grid-column: 2;
     }
 
-    .grid-container>*:last-child {
+    .grid-container--home>*:last-child {
         grid-column: 3;
+    }
+
+    .grid-container--destination {
+        /* --flow-space: 2rem; */
+        justify-items: start;
+        align-content: start;
+        grid-template-areas:
+            ' . title title . '
+            ' . image tabs . '
+            ' . image content . ';
+    }
+
+    .grid-container--destination>img {
+        grid-area: image;
+        max-width: 90%;
+    }
+
+    .grid-container .flex {
+        flex-direction: row;
+        justify-content: left;
+        padding-inline: 0;
+        --gap: 5rem;
     }
 }
