--- a/c06/style.css
+++ b/c06/style.css
@@ -496,7 +496,7 @@ select {
     border: 0;
     border-radius: 50%;
     aspect-ratio: 1;
-    padding: .5rem;
+    padding: .5em;
     background-color: hsl(var(--clr-white) / .25);
 }
 
