--- a/c06/style.css
+++ b/c06/style.css
@@ -756,6 +756,8 @@ body {
 
 .grid-container--crew {
     padding-bottom: 0;
+    /* justify-items: start;
+    align-content: start; */
     --flow-space: 2rem;
     grid-template-areas:
         'title'
@@ -771,6 +773,7 @@ body {
 .grid-container--crew>picture {
     grid-area: image;
     max-width: 60%;
+    align-self: end;
     border-bottom: 1px solid hsl(var(--clr-white) / .15);
 }
 
@@ -808,32 +811,49 @@ body {
 
     .grid-container--crew {
         /* --flow-space: 2rem; */
-        justify-items: start;
-        align-content: start;
+        /* justify-items: start;
+        align-content: start; */
+        /* height: 83.5vh; */
         grid-template-areas:
             ' . title image . '
             ' . content image . '
             ' . tabs image . ';
     }
 
+
     .grid-container--destination>picture {
-        max-width: 90%;
+        max-width: 100%;
+    }
+
+    .grid-container--crew>.numbered-title {
+        justify-self: start;
+        align-self: start;
+        margin-top: 2rem;
     }
 
     .grid-container--crew>.dot-indicators {
         justify-self: start;
+        align-self: start;
         margin: 0;
         padding-block: 2rem;
     }
 
     .grid-container--crew>article {
         margin: 0;
+        padding: 0;
+        align-self: start;
+        justify-self: start;
+        min-height: 20rem;
+
     }
 
 
     .grid-container--crew>picture {
-        max-width: 70%;
+        max-width: 50vh;
+        overflow: hidden;
+        /* height: 80%; */
         align-self: end;
+        justify-self: center;
     }
 
     .grid-container--crew .flex {
